feat: data driven filters for explore page
