# apps/backend/app/shared/types/filters.ts
@@ -1,0 +1,7 @@
+export type Filter<T> = {
+  label: string;
+  id: string;
+  type: "input" | "select" | "toggle" | "multi-select" | "range";
+  paramKey: T;
+  options?: { label: string; value: string }[];
+};
